# diffuse

./: .editorconfig  .flake8  .gitignore  .markdownlint.json  .mypy.ini  .pylintrc  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  ChangeLog_ru  README  README.md  README_ru  _config.yml  com.github.mightycreak.Diffuse.yml  install.py  io.github.mightycreak.Diffuse.yml  meson.build  meson_options.txt  new_release.sh  requirements.dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  lint_python.yml  main.yml
build-scripts/: meson-postinstall.py
data/: diffuse.desktop.in  diffuse.gresource.xml  diffuserc.in  io.github.mightycreak.Diffuse.appdata.xml.in  io.github.mightycreak.Diffuse.desktop.in  io.github.mightycreak.Diffuse.metainfo.xml.in  meson.build
data/icons/: diffuse.icns  meson.build
data/usr/share/diffuse/syntax/: c++.syntax  csh.syntax  csharp.syntax  css.syntax  gettext.syntax  html.syntax  ini.syntax  javascript.syntax  json.syntax  jsp.syntax  makefile.syntax  objective-c++.syntax  perl.syntax  php.syntax  r.syntax  ruby.syntax  rust.syntax  sql.syntax  vb.syntax  verilog.syntax
data/usr/share/gnome/help/diffuse/C/: diffuse.xml
data/usr/share/gnome/help/diffuse/cs/: diffuse.xml
data/usr/share/gnome/help/diffuse/it/: diffuse.xml
data/usr/share/gnome/help/diffuse/ru/: diffuse.xml
data/usr/share/man/cs/man1/: diffuse.1
data/usr/share/man/it/man1/: diffuse.1
data/usr/share/man/man1/: diffuse.1
data/usr/share/man/ru/man1/: diffuse.1
data/usr/share/omf/diffuse/: diffuse-C.omf  diffuse-cs.omf  diffuse-it.omf  diffuse-ru.omf
debian/: changelog  control  copyright  rules
docs/: README.md  developers.md  translators.md  users.md
docs/developers/: developers-setup.md  release-process.md
po/: LINGUAS  POTFILES  POTFILES.in  README.md  cs.po  de.po  diffuse.pot  es.po  fr.po  it.po  ja.po  ka.po  ko.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  th.po  tr.po  update-translations.py  zh_CN.po  zh_TW.po
src/: constants.py.in  diffuse.in  main.py  meson.build  resources.py  utils.py  widgets.py
src/diffuse/: constants.py  constants.py.in  dialogs.py  diffuse.in  main.py  meson.build  preferences.py  resources.py  utils.py  widgets.py  window.py
src/diffuse/mac-os-app/: Info.plist.in  diffuse-mac.in  mac_launcher.sh.in
src/diffuse/vcs/: bzr.py  cvs.py  darcs.py  folder_set.py  git.py  hg.py  mtn.py  rcs.py  src.py  svk.py  svn.py  vcs_interface.py  vcs_registry.py
src/etc/: diffuserc
src/usr/share/applications/: diffuse.desktop
src/usr/share/diffuse/syntax/: bash.syntax  c++.syntax  erlang.syntax  fortran.syntax  glsl.syntax  java.syntax  octave.syntax  opencl.syntax  pascal.syntax  patch.syntax  python.syntax  ruby.syntax  tcl.syntax  vhdl.syntax  xml.syntax
src/usr/share/gnome/help/diffuse/C/: diffuse.xml
src/usr/share/gnome/help/diffuse/cs/: diffuse.xml
src/usr/share/gnome/help/diffuse/it/: diffuse.xml
src/usr/share/gnome/help/diffuse/ru/: diffuse.xml
src/usr/share/man/cs/man1/: diffuse.1
src/usr/share/man/it/man1/: diffuse.1
src/usr/share/man/man1/: diffuse.1
src/usr/share/man/ru/man1/: diffuse.1
src/usr/share/metainfo/: io.github.mightycreak.Diffuse.metainfo.xml
src/usr/share/omf/diffuse/: diffuse-C.omf  diffuse-cs.omf  diffuse-it.omf  diffuse-ru.omf
src/vcs/: cvs.py  darcs.py  folder_set.py  git.py  hg.py  mtn.py  rcs.py  svk.py  svn.py  vcs_interface.py  vcs_registry.py
tests/syntax/rust/: untested.rs  valid_comments.rs  valid_strings.rs
translations/: LINGUAS  README  README.md  cs.po  de.po  es.po  it.po  ja.po  ko.po  pl.po  pt.po  ru.po  sv.po  th.po  update-translations.py  zh_CN.po  zh_TW.po
utils/: book2manual.xsl  makehtmlmanual.sh  makemacicon.sh  makemanual.py  makepdfmanual.sh  translations.txt
windows-installer/: README.txt  build.py  cs.isl  de.isl  diffuse.iss  diffuse.new.iss  diffuserc  en.isl  es.isl  it.isl  ja.isl  ko.isl  pl.isl  pt.isl  ru.isl  setup.new.py  setup.py  style.css  sv.isl  th.isl  translations.txt  zh_CN.isl  zh_TW.isl
